[package]
name = "granite"
version = "0.1.0"
authors = ["Jean Pierre Dudey <me@jeandudey.tech>"]
edition = "2018"

[dependencies]
ffi = { package = "granite-sys", path = "sys" }
libc = "0.2"

[dependencies.gee]
path = "../gee"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs"
